--- a/debian/control
+++ b/debian/control
@@ -3,19 +3,18 @@ Section: utils
 Priority: optional
 Maintainer: baijincheng <baijincheng@kylinos.cn>
 Build-Depends: debhelper,
-               qtbase5-dev (>= 5.1),
+               qtbase5-dev,
                qt5-qmake,
                qtchooser,
                qttools5-dev-tools,
                qtbase5-dev-tools,
-               libx11-dev,
+               qtmultimedia5-dev,
 Standards-Version: 4.4.1
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Browser: https://salsa.debian.org/debian/kylin-usb-creator
-#Vcs-Git: https://salsa.debian.org/debian/kylin-usb-creator.git
+Homepage: https://github.com/ubuntukylin/kylin-recording
+#Vcs-Browser: https://github.com/ubuntukylin/kylin-recording
+#Vcs-Git: https://github.com/ubuntukylin/kylin-recording.git
 
 Package: kylin-recording
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: kylin-recording
