--- a/kylin-recording.desktop
+++ b/kylin-recording.desktop
@@ -2,6 +2,6 @@
 Name=kylin-recording
 Name[zh_CN]=麒麟录音
 Exec=/usr/bin/kylin-recording %u
-Icon=kylin-recording
+Icon=/usr/share/pixmaps/recording_32.png
 Type=Application
 Categories=GNOME;Utility;
