--- a/debian/control
+++ b/debian/control
@@ -10,11 +10,12 @@ Build-Depends: debhelper,
                qtbase5-dev-tools,
                qtmultimedia5-dev,
 Standards-Version: 4.4.1
-Homepage: https://github.com/ubuntukylin/kylin-recording
-#Vcs-Browser: https://github.com/ubuntukylin/kylin-recording
-#Vcs-Git: https://github.com/ubuntukylin/kylin-recording.git
+Homepage: <insert the upstream URL, if relevant>
+#Vcs-Browser: https://salsa.debian.org/debian/kylin-usb-creator
+#Vcs-Git: https://salsa.debian.org/debian/kylin-usb-creator.git
 
 Package: kylin-recording
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Description: kylin-recording
+Description: <insert up to 60 chars description>
+ <insert long description, indented with spaces>
