--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: kylin-recording
+Source: kylin-recorder
 Section: utils
 Priority: optional
 Maintainer: baijincheng <baijincheng@kylinos.cn>
@@ -11,10 +11,10 @@ Build-Depends: debhelper,
                qtmultimedia5-dev,
 Standards-Version: 4.4.1
 Homepage: <insert the upstream URL, if relevant>
-#Vcs-Browser: https://salsa.debian.org/debian/kylin-recording
-#Vcs-Git: https://salsa.debian.org/debian/kylin-recording.git
+#Vcs-Browser: https://salsa.debian.org/debian/kylin-recorder
+#Vcs-Git: https://salsa.debian.org/debian/kylin-recorder.git
 
-Package: kylin-recording
+Package: kylin-recorder
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: <insert up to 60 chars description>
