--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,9 @@ Build-Depends: debhelper,
                qttools5-dev-tools,
                qtbase5-dev-tools,
                qtmultimedia5-dev,
+			   libmp3lame-dev,
+			   libgsettings-qt-dev,
+			   pkgconf
 Standards-Version: 4.4.1
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Browser: https://salsa.debian.org/debian/kylin-recorder
