--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,10 @@ Build-Depends: debhelper,
                qtbase5-dev-tools,
                qtmultimedia5-dev,
 			   libmp3lame-dev,
+			   ffmpeg,
 			   libgsettings-qt-dev,
+			   libqt5x11extras5-dev,
+               libkf5windowsystem-dev,
 			   pkgconf
 Standards-Version: 4.4.1
 Homepage: <insert the upstream URL, if relevant>
@@ -19,6 +22,10 @@ Homepage: <insert the upstream URL, if relevant>
 
 Package: kylin-recorder
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: libburner-media3-1,
+         gstreamer1.0-plugins-good,
+         gstreamer1.0-pulseaudio,
+         ${shlibs:Depends}, 
+		 ${misc:Depends}
 Description: <insert up to 60 chars description>
  <insert long description, indented with spaces>
