--- a/kylin-recorder.desktop
+++ b/kylin-recorder.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=kylin-recorder
 Name[zh_CN]=麒麟录音
-Comment=Friendly interface and easy to operate recording tools
+Comment=Friendly interface and easy to operate recording tool
 Comment[zh_CN]=界面友好操作简单的录音工具
 GenericName=Audio recorder
 Name[bo_CN]=གྱི་ལིང་སྒྲ་ཕབ།
