优化部分代码逻辑0115

--- a/kylin-recorder.desktop
+++ b/kylin-recorder.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=kylin-recorder
+Name=Kylin Recorder
 Name[zh_CN]=麒麟录音
 Comment=Friendly interface and easy to operate recording tool
 Comment[zh_CN]=界面友好操作简单的录音工具
