应用名称修改

--- a/kylin-recorder.desktop
+++ b/kylin-recorder.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
-Name=Kylin Recorder
-Name[zh_CN]=麒麟录音
+Name=Recorder
+Name[zh_CN]=录音
 Comment=Friendly interface and easy to operate recording tool
 Comment[zh_CN]=界面友好操作简单的录音工具
 GenericName=Audio recorder
