--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,8 @@ Build-Depends: debhelper,
 			   libgsettings-qt-dev,
 			   libqt5x11extras5-dev,
                libkf5windowsystem-dev,
-			   pkgconf
+			   pkgconf,
+			   libukui-log4qt-dev
 Standards-Version: 4.4.1
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Browser: https://salsa.debian.org/debian/kylin-recorder
@@ -27,6 +28,7 @@ Depends: libburner-media3-1,
          gstreamer1.0-plugins-good,
          gstreamer1.0-plugins-bad,
          gstreamer1.0-pulseaudio,
+         libukui-log4qt-dev,
          ${shlibs:Depends}, 
 		 ${misc:Depends}
 Description: Recorder tool for UKUI
