--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Homepage: <insert the upstream URL, if relevant>
 Package: kylin-recorder
 Architecture: any
 Depends: libburner-media3-1,
+         gstreamer1.0-libav,
          gstreamer1.0-plugins-good,
          gstreamer1.0-plugins-bad,
          gstreamer1.0-pulseaudio,
