--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,12 @@ Build-Depends: debhelper,
 			   libqt5x11extras5-dev,
                libkf5windowsystem-dev,
 			   pkgconf,
-			   libukui-log4qt-dev
+			   libukui-log4qt-dev,
+			   libavdevice-dev,
+               libavfilter-dev,
+               libavformat-dev,
+               libavresample-dev,
+               libavutil-dev
 Standards-Version: 4.4.1
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Browser: https://salsa.debian.org/debian/kylin-recorder
