41649tooltips文字提示修改

--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,8 @@ Build-Depends: debhelper,
                libavfilter-dev,
                libavformat-dev,
                libavresample-dev,
-               libavutil-dev
+               libavutil-dev,
+               libmpv-dev,
 Standards-Version: 4.4.1
 Homepage: <insert the upstream URL, if relevant>
 #Vcs-Browser: https://salsa.debian.org/debian/kylin-recorder
